--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -55,7 +55,6 @@
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
@@ -80,10 +79,8 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "pnpm run build:main && pnpm run build:svelte",
-    "postbuild": "pkg --strict",
-    "build:main": "pkg build --strict",
+    "build": "pnpm run build:main && pnpm run build:svelte && pkg check --strict",
+    "build:main": "pkg build --strict --clean",
     "build:svelte": "svelte-kit sync && svelte-package -i ./svelte -o dist-svelte",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
@@ -168,7 +165,7 @@
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "0.6.4",
     "@sanity/client": "6.15.11",
-    "@sanity/pkg-utils": "^6.1.0",
+    "@sanity/pkg-utils": "6.4.1",
     "@sanity/ui": "2.1.2",
     "@sveltejs/adapter-auto": "^3.2.0",
     "@sveltejs/kit": "^2.5.5",
@@ -188,7 +185,7 @@
     "rimraf": "^5.0.5",
     "styled-components": "6.1.8",
     "svelte": "^4.2.13",
-    "typescript": "5.4.2",
+    "typescript": "5.4.5",
     "uuid": "9.0.1",
     "vitest": "^1.4.0"
   },
