--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "styled-components": "6.1.8"
   },
   "devDependencies": {
-    "@sanity/pkg-utils": "^6.1.0",
+    "@sanity/pkg-utils": "6.4.1",
     "prettier": "3.2.5",
     "prettier-plugin-packagejson": "2.4.14",
     "prettier-plugin-svelte": "3.2.2",
     "prettier-plugin-tailwindcss": "0.5.13",
     "turbo": "1.13.2",
-    "typescript": "5.4.2"
+    "typescript": "5.4.5"
   },
   "packageManager": "pnpm@8.15.6",
   "pnpm": {
