--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -25,7 +25,6 @@
   },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -33,8 +32,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "pkg build --strict && pkg --strict",
+    "build": "pkg build --strict --check --clean",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
     "test": "vitest --typecheck",
@@ -123,13 +121,13 @@
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "0.6.4",
     "@sanity/client": "^6.15.11",
-    "@sanity/pkg-utils": "^6.1.0",
+    "@sanity/pkg-utils": "6.4.1",
     "happy-dom": "^14.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.37.2",
     "styled-components": "6.1.8",
-    "typescript": "5.4.2",
+    "typescript": "5.4.5",
     "vitest": "^1.4.0"
   },
   "peerDependencies": {
