--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -23,7 +23,6 @@
     "./package.json": "./package.json"
   },
   "module": "./dist/index.js",
-  "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "files": [
     "dist",
@@ -31,8 +30,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "pkg build --strict && pkg --strict",
+    "build": "pkg build --strict --check --clean",
     "lint": "eslint .",
     "prepublishOnly": "pnpm build",
     "test": "vitest --pass-with-no-tests --typecheck",
@@ -103,7 +101,7 @@
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "0.6.4",
     "@sanity/client": "^6.15.11",
-    "@sanity/pkg-utils": "^6.1.0",
+    "@sanity/pkg-utils": "6.4.1",
     "@sanity/preview-url-secret": "^1.6.7",
     "@sanity/visual-editing": "1.8.7",
     "@sveltejs/kit": "^2.5.5",
@@ -115,7 +113,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "rollup-plugin-svelte": "^7.2.0",
     "svelte": "^4.2.13",
-    "typescript": "5.4.2",
+    "typescript": "5.4.5",
     "vitest": "^1.4.0"
   },
   "peerDependencies": {
