fix: allow canary releases of next

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -193,7 +193,7 @@
     "@remix-run/react": ">= 2",
     "@sanity/client": "^6.15.11",
     "@sveltejs/kit": ">= 2",
-    "next": ">= 13",
+    "next": ">= 13 || >=14.2.0-canary.0 <14.2.0",
     "svelte": ">= 4"
   },
   "peerDependenciesMeta": {
