fix: inline `async-cache-dedupe` to improve ESM interop

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -61,9 +61,10 @@
     },
     {
       "matchDepNames": [
-        "@sanity/client",
-        "nanostores",
         "@nanostores/vue",
+        "@sanity/client",
+        "async-cache-dedupe",
+        "nanostores",
         "nuxt"
       ],
       "semanticCommitType": "fix"
