--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -115,17 +115,15 @@
     },
     "root": true
   },
-  "dependencies": {
-    "async-cache-dedupe": "2.1.0"
-  },
   "devDependencies": {
     "@repo/channels": "0.4.0",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "0.6.5",
     "@sanity/client": "^6.15.14",
-    "@sanity/pkg-utils": "6.6.6",
+    "@sanity/pkg-utils": "6.7.0",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "async-cache-dedupe": "2.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
