fix: inline `fast-deep-equal` for better ESM interop

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -64,6 +64,7 @@
         "@nanostores/vue",
         "@sanity/client",
         "async-cache-dedupe",
+        "fast-deep-equal",
         "nanostores",
         "nuxt"
       ],
