--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -134,8 +134,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "1.6.7",
-    "fast-deep-equal": "3.1.3"
+    "@sanity/core-loader": "1.6.7"
   },
   "devDependencies": {
     "@repo/channels": "0.4.0",
@@ -150,6 +149,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "fast-deep-equal": "3.1.3",
     "react": "^18.2.0",
     "typescript": "5.4.5",
     "vitest": "^1.5.0"
