--- a/packages/presentation/tsconfig.base.json
+++ b/packages/presentation/tsconfig.base.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@sanity/pkg-utils/tsconfig/strictest.json",
   "compilerOptions": {
     "target": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
