--- a/packages/preview-url-secret/tsconfig.base.json
+++ b/packages/preview-url-secret/tsconfig.base.json
@@ -23,6 +23,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "noPropertyAccessFromIndexSignature": false
   }
 }
