--- a/packages/channels/tsconfig.json
+++ b/packages/channels/tsconfig.json
@@ -1,34 +1,11 @@
 {
   "extends": "@sanity/pkg-utils/tsconfig/strictest.json",
   "compilerOptions": {
-    "composite": true,
-    "declarationDir": "./dist/dts",
-    "outDir": "./dist/dts",
-    "incremental": true,
-    "noEmit": true,
-    "strictNullChecks": true,
+    "rootDir": ".",
+    "outDir": "./dist",
     "baseUrl": ".",
-    "target": "esnext",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "noImplicitAny": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
     "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedParameters": false
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["dist", "node_modules"]
