--- a/packages/visual-editing-helpers/tsconfig.base.json
+++ b/packages/visual-editing-helpers/tsconfig.base.json
@@ -1,8 +1,7 @@
 {
   "extends": "@sanity/pkg-utils/tsconfig/strictest.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
+    "rootDir": ".",
     "baseUrl": "."
   }
 }
