--- a/packages/visual-editing-helpers/tsconfig.build.json
+++ b/packages/visual-editing-helpers/tsconfig.build.json
@@ -1,5 +1,9 @@
 {
   "extends": "./tsconfig.base",
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules"],
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist"
+  }
 }
