--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -31,7 +31,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "fast-deep-equal": "3.1.3",
-    "next": "14.3.0-canary.11",
+    "next": "14.2.2",
     "next-sanity": "9.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,7 +42,7 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.3.0-canary.11",
+    "@next/bundle-analyzer": "14.2.2",
     "@types/node": "^20",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
