--- a/apps/next-no-cache/package.json
+++ b/apps/next-no-cache/package.json
@@ -31,7 +31,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "fast-deep-equal": "3.1.3",
-    "next": "14.3.0-canary.11",
+    "next": "14.3.0-canary.12",
     "next-sanity": "9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,7 +48,7 @@
     "@types/react-dom": "^18.2.25",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.2",
+    "eslint-config-next": "14.3.0-canary.12",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "5.4.5"
