--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -78,6 +78,8 @@
   "files": [
     "dist",
     "src",
+    "!src/**/*.test.ts",
+    "!src/**/*.test-d.ts",
     "CHANGELOG.md"
   ],
   "scripts": {
