--- a/apps/next-with-i18n/package.json
+++ b/apps/next-with-i18n/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@sanity/assist": "^3.0.3",
     "@sanity/client": "^6.15.20",
-    "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/vision": "^3.38.0",
     "@tailwindcss/typography": "0.5.12",
@@ -32,6 +31,8 @@
     "server-only": "0.0.1"
   },
   "devDependencies": {
+    "@sanity/presentation": "workspace:*",
+    "@sanity/visual-editing": "workspace:*",
     "@types/react": "^18.2.79",
     "autoprefixer": "10.4.19",
     "eslint": "^8.57.0",
