chore: handle build command

--- a/apps/next-with-i18n/package.json
+++ b/apps/next-with-i18n/package.json
@@ -5,7 +5,7 @@
     "build": "next build",
     "dev": "next -p 3232",
     "format": "npx prettier --write . --ignore-path .gitignore",
-    "lint": "next lint -- --ignore-path .gitignore",
+    "lint": "next lint",
     "lint:fix": "npm run format && npm run lint -- --fix",
     "start": "next start",
     "type-check": "tsc --noEmit"
