--- a/packages/react-loader/tsconfig.base.json
+++ b/packages/react-loader/tsconfig.base.json
@@ -1,8 +1,14 @@
 {
   "extends": "@sanity/pkg-utils/tsconfig/strictest.json",
   "compilerOptions": {
+      "paths": {
+        "@sanity/react-loader/jsx": ["./src/jsx/index.ts"],
+        "@sanity/react-loader/rsc": ["./src/rsc/index.ts"],
+        "@sanity/react-loader": ["./src/index"]
+    },
     "baseUrl": ".",
     "rootDir": ".",
+    "outDir": "dist",
     "noUnusedLocals": false,
     "noUnusedParameters": false
   }
