--- a/packages/react-loader/tsconfig.json
+++ b/packages/react-loader/tsconfig.json
@@ -1,17 +1,8 @@
 {
   "extends": "./tsconfig.base",
-  "compilerOptions": {
-    "paths": {
-      "@sanity/core-loader": ["../core-loader/src"],
-      "@repo/visual-editing-helpers": ["../visual-editing-helpers/src"],
-      "@repo/visual-editing-helpers/*": ["../visual-editing-helpers/src/*"]
-    }
-  },
   "include": [
     "**/*.ts",
-    "**/*.tsx",
-    "../core-loader/src",
-    "../visual-editing-helpers/src"
+    "**/*.tsx"
   ],
   "exclude": ["dist", "node_modules"]
 }
