--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "private": true,
   "scripts": {
     "build": "turbo run build --filter='./packages/*'",
+    "build:astro": "turbo run build --filter=./apps/astro",
     "dev": "turbo run dev --filter=./apps/* --filter=!./apps/next-server-only --filter=!./apps/next-no-cache",
+    "dev:astro": "turbo run dev --filter=./apps/astro --filter=./apps/studio",
     "dev:next": "turbo run dev --filter=./apps/next --filter=./apps/studio",
     "dev:nuxt": "turbo run dev --filter=./apps/nuxt --filter=./apps/studio",
     "dev:page-builder-demo": "turbo run dev --filter=./apps/page-builder-demo --filter=./apps/studio",
@@ -37,6 +39,7 @@
     "@sanity/pkg-utils": "6.8.11",
     "@sanity/prettier-config": "1.0.2",
     "prettier": "3.2.5",
+    "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-svelte": "3.2.3",
     "prettier-plugin-tailwindcss": "0.5.14",
     "turbo": "1.13.3",
