fix(astro): change localhost port to 3006

--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "astro": "astro",
     "build": "astro check && astro build",
-    "dev": "astro dev",
+    "dev": "astro dev --port 3006",
     "preview": "astro preview",
     "start": "astro dev"
   },
