--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "@sanity/pkg-utils": "6.8.14",
     "@sanity/prettier-config": "1.0.2",
+    "framer-motion": "11.2.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
@@ -76,6 +77,7 @@
       "@sanity/vision": "$@sanity/vision",
       "@sanity/visual-editing": "workspace:*",
       "create-sanity": "$create-sanity",
+      "framer-motion": "$framer-motion",
       "groq": "$groq",
       "sanity": "$sanity",
       "styled-components": "$styled-components"
