--- a/apps/astro/turbo.json
+++ b/apps/astro/turbo.json
@@ -3,6 +3,8 @@
   "extends": ["//"],
   "pipeline": {
     "build": {
+      "dotEnv": [".env", ".env.local"],
+      "env": ["SANITY_API_READ_TOKEN", "SANITY_VISUAL_EDITING_ENABLED"],
       "outputs": [".vercel/**", "dist/**"]
     }
   }
