fix: improve lazy loading of `enableVisualEditing`

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -102,7 +102,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/visual-editing": "1.8.20"
+    "@sanity/visual-editing": "workspace:*"
   },
   "devDependencies": {
     "@repo/package.config": "workspace:*",
