--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -98,7 +98,7 @@
     "@sanity/client": "^6.18.2",
     "@sanity/pkg-utils": "6.8.15",
     "@sanity/preview-url-secret": "^1.6.13",
-    "@sanity/visual-editing": "1.8.20",
+    "@sanity/visual-editing": "workspace:*",
     "@sveltejs/kit": "^2.5.8",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
