feat(visual-editing): add Astro VisualEditing component

--- a/packages/visual-editing/tsconfig.json
+++ b/packages/visual-editing/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": ["./.svelte-kit/tsconfig.json", "./tsconfig.base"],
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["dist", "dist-svelte", "node_modules"]
+  "exclude": ["astro", "dist", "dist-svelte", "node_modules"]
 }
