--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -28,6 +28,10 @@
       "require": "./dist/index.cjs",
       "default": "./dist/index.js"
     },
+    "./astro": {
+      "import": "./astro/index.ts",
+      "default": "./astro/index.ts"
+    },
     "./create-data-attribute": {
       "source": "./src/create-data-attribute.ts",
       "import": "./dist/create-data-attribute/index.js",
@@ -73,6 +77,7 @@
     }
   },
   "files": [
+    "astro",
     "dist",
     "dist-svelte",
     "src",
@@ -168,6 +173,7 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
+    "astro": "^4.8.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -187,6 +193,7 @@
     "@remix-run/react": ">= 2",
     "@sanity/client": "^6.18.2",
     "@sveltejs/kit": ">= 2",
+    "astro": ">= 4",
     "next": ">= 13 || >=14.3.0-canary.0 <14.3.0",
     "svelte": ">= 4"
   },
@@ -198,6 +205,9 @@
       "optional": true
     },
     "@sveltejs/kit": {
+      "optional": true
+    },
+    "astro": {
       "optional": true
     },
     "next": {
