--- a/apps/next-server-only/package.json
+++ b/apps/next-server-only/package.json
@@ -31,10 +31,10 @@
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "fast-deep-equal": "3.1.3",
-    "next": "14.3.0-canary.64",
+    "next": "14.3.0-canary.78",
     "next-sanity": "9.0.20",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
     "react-wrap-balancer": "^1.1.0",
     "sanity": "^3.42.1",
     "sanity-plugin-asset-source-unsplash": "^3.0.1",
