--- a/package.json
+++ b/package.json
@@ -58,6 +58,12 @@
   },
   "packageManager": "pnpm@8.15.8",
   "pnpm": {
+    "peerDependencyRules": {
+      "allowAny": [
+        "react",
+        "react-dom"
+      ]
+    },
     "overrides": {
       "@sanity/block-tools": "$@sanity/block-tools",
       "@sanity/cli": "$@sanity/cli",
