--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -148,7 +148,6 @@
     "@vercel/stega": "0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-is": "18.3.1",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.30.0"
   },
@@ -175,6 +174,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "happy-dom": "^14.11.0",
     "ls-engines": "^0.9.1",
+    "react-is": "^18.3.1",
     "rimraf": "^5.0.5",
     "styled-components": "6.1.11",
     "svelte": "^4.2.17",
