--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -146,8 +146,6 @@
   "dependencies": {
     "@sanity/preview-url-secret": "^1.6.14",
     "@vercel/stega": "0.1.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.30.0"
   },
@@ -174,6 +172,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "happy-dom": "^14.11.0",
     "ls-engines": "^0.9.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
     "rimraf": "^5.0.5",
     "styled-components": "6.1.11",
@@ -187,6 +187,8 @@
     "@sanity/client": "^6.18.3",
     "@sveltejs/kit": ">= 2",
     "next": ">= 13 || >=14.3.0-canary.0 <14.3.0",
+    "react": "^18.3 || >=19.0.0-rc",
+    "react-dom": "^18.3 || >=19.0.0-rc",
     "svelte": ">= 4"
   },
   "peerDependenciesMeta": {
