fix(types): add react export to typeVersions
Otherwise the types are not properly exported.

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -70,6 +70,9 @@
       "next-pages-router": [
         "./dist/next-pages-router/index.d.ts"
       ],
+      "react": [
+        "./dist/react/index.d.ts"
+      ],
       "remix": [
         "./dist/remix/index.d.ts"
       ],
