feat: support react 19

--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -150,7 +150,7 @@
   },
   "peerDependencies": {
     "@sanity/client": "^6.19.0",
-    "react": "^18.2.0"
+    "react": "^18.3 || >=19.0.0-rc"
   },
   "engines": {
     "node": ">=18"
