--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -12,18 +12,19 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
+    "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
-    "@sanity/astro": "^3.1.2",
+    "@sanity/astro": "^3.1.3",
     "@sanity/client": "^6.19.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/visual-editing": "workspace:^",
+    "@sanity/visual-editing": "workspace:*",
     "apps-common": "workspace:^",
     "astro": "^4.9.2",
     "astro-portabletext": "^0.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sanity": "^3.43.0",
+    "sanity": "3.44.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
