fix: add next 15 to peer dep range

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -195,7 +195,7 @@
     "@remix-run/react": ">= 2",
     "@sanity/client": "^6.19.1",
     "@sveltejs/kit": ">= 2",
-    "next": ">= 13 || >=14.3.0-canary.0 <14.3.0",
+    "next": ">= 13 || >=14.3.0-canary.0 <14.3.0 || >=15.0.0-rc",
     "react": "^18.3 || >=19.0.0-rc",
     "react-dom": "^18.3 || >=19.0.0-rc",
     "svelte": ">= 4"
