--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -49,7 +49,7 @@
       "rangeStrategy": "bump"
     },
     {
-      "matchDepNames": ["sanity", "@sanity/util"],
+      "matchDepNames": ["groq-js", "sanity", "@sanity/schema", "@sanity/types", "@sanity/util"],
       "matchFileNames": [
         "packages/presentation/package.json",
         "packages/preview-url-secret/package.json",
