--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,6 +6,7 @@
   "packages": {
     "packages/channels": {},
     "packages/core-loader": {},
+    "packages/insert-menu": {},
     "packages/overlays": {},
     "packages/presentation": {},
     "packages/preview-kit-compat": {},
