--- a/packages/insert-menu/package.json
+++ b/packages/insert-menu/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^6.9.1",
+    "@sanity/types": "^3.45.0",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^8.57.0",
@@ -52,10 +53,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
-    "sanity": "3.45.0",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
+    "@sanity/types": "^3.45.0",
     "react": "^18.3 || >=19.0.0-rc",
     "react-dom": "^18.3 || >=19.0.0-rc",
     "react-is": "^18.3 || >=19.0.0-rc"
