--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -104,6 +104,7 @@
     "@types/lodash.isequal": "^4.5.8",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "11.0.8",
+    "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.7",
     "mnemonist": "0.39.8",
@@ -117,6 +118,7 @@
     "@repo/visual-editing-helpers": "0.6.16",
     "@sanity/client": "^6.19.1",
     "@sanity/pkg-utils": "6.9.3",
+    "@types/lodash.get": "^4.4.9",
     "happy-dom": "^14.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
