--- a/packages/insert-menu/package.json
+++ b/packages/insert-menu/package.json
@@ -33,6 +33,7 @@
   ],
   "scripts": {
     "build": "pkg build --strict --clean --check",
+    "dev": "workshop dev",
     "lint": "eslint .",
     "ts:check": "tsc --noEmit"
   },
@@ -44,6 +45,7 @@
   "devDependencies": {
     "@sanity/pkg-utils": "^6.9.3",
     "@sanity/types": "^3.45.0",
+    "@sanity/ui-workshop": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.57.0",
