fix(insert-menu): capitalise group.name if used as title fallback

--- a/packages/insert-menu/package.json
+++ b/packages/insert-menu/package.json
@@ -40,12 +40,14 @@
   "browserslist": "extends @sanity/browserslist-config",
   "dependencies": {
     "@sanity/icons": "^3.2.0",
-    "@sanity/ui": "^2.3.3"
+    "@sanity/ui": "^2.3.3",
+    "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "^6.9.3",
     "@sanity/types": "^3.45.0",
     "@sanity/ui-workshop": "^2.0.15",
+    "@types/lodash.startcase": "^4.4.9",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.57.0",
