--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -40,16 +40,16 @@ jobs:
       # Publish to NPM on new releases
       - uses: actions/checkout@v4
         if: ${{ steps.release.outputs.releases_created || github.event.inputs.publish == 'true' }}
-      - uses: pnpm/action-setup@v2
         if: ${{ steps.release.outputs.releases_created || github.event.inputs.publish == 'true' }}
+      - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
         if: ${{ steps.release.outputs.releases_created || github.event.inputs.publish == 'true' }}
         with:
           cache: pnpm
           node-version: lts/*
       - name: install deps & build
-        run: corepack enable && pnpm --version && pnpm install --ignore-scripts && pnpm build --filter=./packages/*
         if: ${{ steps.release.outputs.releases_created || github.event.inputs.publish == 'true' }}
+        run: pnpm install --ignore-scripts && pnpm build --filter=./packages/*
       - name: Set publishing config
         run: pnpm config set '//registry.npmjs.org/:_authToken' "${NODE_AUTH_TOKEN}"
         if: ${{ steps.release.outputs.releases_created || github.event.inputs.publish == 'true' }}
