--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -98,7 +98,7 @@
   },
   "dependencies": {
     "@sanity/icons": "^3.3.1",
-    "@sanity/preview-url-secret": "^1.6.19",
+    "@sanity/preview-url-secret": "workspace:^",
     "@sanity/ui": "^2.6.1",
     "@sanity/uuid": "3.0.2",
     "@types/lodash.isequal": "^4.5.8",
@@ -113,9 +113,9 @@
     "suspend-react": "0.1.3"
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
-    "@repo/visual-editing-helpers": "0.6.19",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/pkg-utils": "6.9.3",
     "@types/lodash.get": "^4.4.9",
