--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -153,16 +153,16 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/preview-url-secret": "^1.6.19",
+    "@sanity/preview-url-secret": "workspace:^",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
     "valibot": "0.31.1"
   },
   "devDependencies": {
     "@remix-run/react": "^2.9.2",
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
-    "@repo/visual-editing-helpers": "0.6.19",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "6.21.1",
     "@sanity/pkg-utils": "6.9.3",
     "@sanity/ui": "2.6.1",
