--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -138,7 +138,7 @@
     "@sanity/uuid": "3.0.2"
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/icons": "^3.3.1",
