--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -128,12 +128,12 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "1.6.21"
+    "@sanity/core-loader": "workspace:*"
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
-    "@repo/visual-editing-helpers": "0.6.19",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/pkg-utils": "6.9.3",
     "@types/react": "^18.3.3",
