--- a/packages/svelte-loader/package.json
+++ b/packages/svelte-loader/package.json
@@ -88,17 +88,17 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/core-loader": "1.6.21",
+    "@sanity/core-loader": "workspace:*",
     "fast-deep-equal": "3.1.3"
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
-    "@repo/visual-editing-helpers": "0.6.19",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/pkg-utils": "6.9.3",
-    "@sanity/preview-url-secret": "^1.6.19",
-    "@sanity/visual-editing": "2.1.8",
+    "@sanity/preview-url-secret": "workspace:^",
+    "@sanity/visual-editing": "workspace:*",
     "@sveltejs/kit": "^2.5.16",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
