--- a/apps/astro/turbo.json
+++ b/apps/astro/turbo.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
-  "pipeline": {
+  "tasks": {
     "build": {
-      "dotEnv": [".env", ".env.local"],
+      "inputs": ["$TURBO_DEFAULT$", ".env", ".env.local"],
       "env": ["SANITY_API_READ_TOKEN", "SANITY_VISUAL_EDITING_ENABLED"],
       "outputs": [".vercel/**", "dist/**"]
     }
