--- a/apps/nuxt/turbo.json
+++ b/apps/nuxt/turbo.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
-  "pipeline": {
+  "tasks": {
     "build": {
-      "dotEnv": [".env", ".env.local"],
+      "inputs": ["$TURBO_DEFAULT$", ".env", ".env.local"],
       "env": ["NUXT_ENV_VERCEL_ENV"]
     },
     "generate": {
