--- a/apps/studio/turbo.json
+++ b/apps/studio/turbo.json
@@ -1,9 +1,9 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
-  "pipeline": {
+  "tasks": {
     "build": {
-      "dotEnv": [".env", ".env.local"],
+      "inputs": ["$TURBO_DEFAULT$", ".env", ".env.local"],
       "env": [
         "SANITY_STUDIO_VERCEL_ENV",
         "SANITY_STUDIO_VERCEL_BRANCH_URL",
