--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "visual-editing-monorepo",
   "private": true,
   "scripts": {
     "build": "turbo run build --filter='./packages/*'",
@@ -53,7 +54,7 @@
     "prettier-plugin-svelte": "3.2.4",
     "prettier-plugin-tailwindcss": "0.6.5",
     "pretty-quick": "^4.0.0",
-    "turbo": "1.13.4",
+    "turbo": "2.0.12",
     "typescript": "5.4.5"
   },
   "packageManager": "pnpm@8.15.8",
