--- a/apps/svelte/turbo.json
+++ b/apps/svelte/turbo.json
@@ -4,7 +4,7 @@
   "tasks": {
     "build": {
       "inputs": ["$TURBO_DEFAULT$", ".env", ".env.local"],
-      "env": ["VERCEL_ENV"],
+      "env": ["VERCEL_ENV", "SANITY_API_READ_TOKEN"],
       "outputs": [".svelte-kit/**", ".vercel/**"]
     }
   }
