--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -33,10 +33,10 @@
   ],
   "scripts": {
     "build": "pkg build --strict --check --clean",
+    "dev": "pkg build --strict",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
-    "test": "vitest --typecheck",
-    "watch": "pkg watch --strict"
+    "prepare": "turbo run build",
+    "test": "vitest --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "prettier": "@sanity/prettier-config",
