--- a/apps/studio/tsconfig.json
+++ b/apps/studio/tsconfig.json
@@ -4,8 +4,7 @@
     "rootDir": ".",
     "types": ["vite/client"],
     "paths": {
-      "@sanity/presentation": ["../../packages/presentation/src"],
-      "@sanity/preview-url-secret": ["../../packages/preview-url-secret/src"]
+      "@sanity/presentation": ["../../packages/presentation/src"]
     },
     "noPropertyAccessFromIndexSignature": false
   },
