--- a/packages/react-loader/package.json
+++ b/packages/react-loader/package.json
@@ -68,7 +68,7 @@
     "build": "pkg build --strict --check --clean",
     "dev": "pkg build --strict",
     "lint": "eslint .",
-    "prepare": "turbo run build",
+    "prepack": "turbo run build",
     "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
