chore: use faster styled-components

--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "@sanity/vision": "3.47.1",
     "create-sanity": "3.47.1",
     "groq": "3.47.1",
-    "sanity": "3.47.1",
-    "styled-components": "6.1.12"
+    "sanity": "3.47.1"
   },
   "devDependencies": {
     "@sanity/pkg-utils": "6.9.3",
@@ -87,7 +86,7 @@
       "framer-motion": "$framer-motion",
       "groq": "$groq",
       "sanity": "$sanity",
-      "styled-components": "$styled-components"
+      "styled-components": "npm:@sanity/styled-components@6.1.12"
     }
   }
 }
