--- a/apps/studio/package.json
+++ b/apps/studio/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sanity/assist": "^3.0.4",
+    "@sanity/insert-menu": "workspace:*",
     "@sanity/presentation": "workspace:*",
     "@sanity/preview-url-secret": "workspace:*",
     "@sanity/ui": "2.8.8",
