chore: have `@sanity/overlays` use a caret version

--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -101,7 +101,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/visual-editing": "workspace:*"
+    "@sanity/visual-editing": "workspace:^"
   },
   "devDependencies": {
     "@repo/package.config": "workspace:*",
