--- a/apps/astro/package.json
+++ b/apps/astro/package.json
@@ -26,6 +26,6 @@
     "react-dom": "^18.3.1",
     "sanity": "3.46.1",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   }
 }
