--- a/apps/next-with-i18n/package.json
+++ b/apps/next-with-i18n/package.json
@@ -45,6 +45,6 @@
     "prettier-plugin-packagejson": "^2.5.0",
     "prettier-plugin-tailwindcss": "0.6.5",
     "tailwindcss": "3.4.4",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   }
 }
