--- a/packages/insert-menu/package.json
+++ b/packages/insert-menu/package.json
@@ -59,7 +59,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   },
   "peerDependencies": {
     "@sanity/types": "^3.47.1",
