--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -54,10 +54,10 @@
   ],
   "scripts": {
     "build": "pkg build --strict --check --clean",
+    "dev": "pkg build --strict",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests --typecheck",
-    "watch": "pkg watch --strict"
+    "prepack": "turbo run build",
+    "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "prettier": "@sanity/prettier-config",
@@ -110,9 +110,9 @@
     "root": true
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
-    "@repo/visual-editing-helpers": "0.6.19",
+    "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/pkg-utils": "6.9.3",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
