--- a/packages/insert-menu/package.json
+++ b/packages/insert-menu/package.json
@@ -32,15 +32,17 @@
     "src"
   ],
   "scripts": {
-    "build": "pkg build --strict --clean --check",
-    "dev": "workshop dev",
+    "build": "pkg build --strict --check --clean",
+    "dev": "pkg build --strict",
+    "dev:workshop": "workshop dev",
     "lint": "eslint .",
+    "prepack": "turbo run build",
     "ts:check": "tsc --noEmit"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "dependencies": {
     "@sanity/icons": "^3.3.1",
-    "@sanity/ui": "^2.6.1",
+    "@sanity/ui": "^2.8.8",
     "lodash.startcase": "^4.4.0"
   },
   "devDependencies": {
@@ -57,7 +59,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
-    "typescript": "^5.4.5"
+    "typescript": "5.4.5"
   },
   "peerDependencies": {
     "@sanity/types": "^3.47.1",
