--- a/packages/overlays/package.json
+++ b/packages/overlays/package.json
@@ -40,9 +40,8 @@
   "scripts": {
     "build": "pkg build --strict --check --clean",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests --typecheck",
-    "watch": "pkg watch --strict"
+    "prepack": "turbo run build",
+    "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "prettier": "@sanity/prettier-config",
@@ -102,7 +101,7 @@
     "root": true
   },
   "dependencies": {
-    "@sanity/visual-editing": "2.1.8"
+    "@sanity/visual-editing": "workspace:^"
   },
   "devDependencies": {
     "@repo/package.config": "workspace:*",
