--- a/packages/preview-url-secret/package.json
+++ b/packages/preview-url-secret/package.json
@@ -84,10 +84,10 @@
   ],
   "scripts": {
     "build": "pkg build --strict --check --clean",
+    "dev": "pkg build --strict",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests --typecheck",
-    "watch": "pkg watch --strict"
+    "prepack": "turbo run build",
+    "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "prettier": "@sanity/prettier-config",
@@ -138,7 +138,7 @@
     "@sanity/uuid": "3.0.2"
   },
   "devDependencies": {
-    "@repo/channels": "0.4.0",
+    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@sanity/client": "^6.21.1",
     "@sanity/icons": "^3.3.1",
