--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -47,10 +47,10 @@
   ],
   "scripts": {
     "build": "pkg build --strict --check --clean",
+    "dev": "pkg build --strict",
     "lint": "eslint .",
-    "prepublishOnly": "pnpm build",
-    "test": "vitest --pass-with-no-tests --typecheck",
-    "watch": "pkg watch --strict"
+    "prepack": "turbo run build",
+    "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
   "prettier": "@sanity/prettier-config",
