--- a/turbo.json
+++ b/turbo.json
@@ -1,13 +1,12 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["RUNNER_OS"],
-  "pipeline": {
+  "ui": "tui",
+  "globalDependencies": [".npmrc", ".prettierrc.cjs", "**/.env.*local"],
+  "tasks": {
     "build": {
       "env": ["GITHUB_ACTIONS"],
       "outputs": [".svelte-kit/**", "dist/**", "dist-svelte/**"],
-      "dependsOn": ["^build"],
-      "outputMode": "new-only"
+      "dependsOn": ["@sanity/insert-menu#build", "^build"]
     },
     "test": {
       "env": ["GITHUB_ACTIONS"],
@@ -15,17 +14,13 @@
       "cache": false
     },
     "lint": {
-      "outputMode": "errors-only"
+      "outputLogs": "errors-only"
     },
     "preview": {
       "dependsOn": ["^build"]
     },
     "dev": {
-      "dependsOn": ["^build"],
       "cache": false,
-      "persistent": true
-    },
-    "watch": {
       "persistent": true
     }
   }
