--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
       "@sanity/client": "$@sanity/client",
       "@sanity/comlink": "workspace:*",
       "@sanity/core-loader": "workspace:*",
+      "@sanity/insert-menu": "workspace:*",
       "@sanity/presentation": "workspace:*",
       "@sanity/preview-kit-compat": "workspace:*",
       "@sanity/preview-url-secret": "workspace:*",
