--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -9,7 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "14.2.5",
+    "@next/bundle-analyzer": "15.0.0-canary.77",
     "@portabletext/react": "^3.1.0",
     "@repo/channels": "workspace:*",
     "@sanity/client": "^6.21.2",
@@ -26,12 +26,12 @@
     "apps-common": "workspace:*",
     "autoprefixer": "10.4.20",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "next": "14.2.5",
+    "eslint-config-next": "15.0.0-canary.77",
     "next-sanity": "9.4.5",
+    "next": "15.0.0-canary.77",
     "postcss": "8.4.41",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-d025ddd3-20240722",
+    "react-dom": "19.0.0-rc-d025ddd3-20240722",
     "styled-components": "6.1.12",
     "suspend-react": "0.1.3",
     "tailwindcss": "^3.4.9",
