--- a/packages/presentation/package.json
+++ b/packages/presentation/package.json
@@ -104,6 +104,7 @@
     "@types/lodash.isequal": "^4.5.8",
     "fast-deep-equal": "3.1.3",
     "framer-motion": "11.0.8",
+    "groq-js": "^1.9.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "mendoza": "3.0.7",
@@ -117,6 +118,7 @@
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.2",
+    "@sanity/insert-menu": "workspace:*",
     "@sanity/pkg-utils": "6.9.3",
     "@types/lodash.get": "^4.4.9",
     "happy-dom": "^14.12.3",
