--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -160,7 +160,8 @@
     "@sanity/preview-url-secret": "workspace:^",
     "@vercel/stega": "0.1.2",
     "scroll-into-view-if-needed": "^3.1.0",
-    "valibot": "0.31.1"
+    "valibot": "0.31.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@remix-run/react": "^2.11.1",
@@ -170,6 +171,8 @@
     "@sanity/client": "6.21.2",
     "@sanity/color": "^3.0.6",
     "@sanity/demo": "^2.0.0",
+    "@sanity/insert-menu": "workspace:*",
+    "@sanity/mutate": "^0.8.0",
     "@sanity/pkg-utils": "6.9.3",
     "@sanity/ui": "2.8.8",
     "@storybook/addon-essentials": "^8.2.9",
