feat: page building

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "overrides": {
       "@sanity/client": "$@sanity/client",
       "@sanity/core-loader": "workspace:*",
+      "@sanity/insert-menu": "workspace:*",
       "@sanity/presentation": "workspace:*",
       "@sanity/preview-kit-compat": "workspace:*",
       "@sanity/preview-url-secret": "workspace:*",
