--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -106,6 +106,7 @@
   "devDependencies": {
     "@repo/package.config": "workspace:*",
     "@sanity/client": "^6.21.2",
+    "@sanity/insert-menu": "workspace:*",
     "@sanity/util": "^3.53.0",
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
