chore: add storybook

--- a/packages/visual-editing/package.json
+++ b/packages/visual-editing/package.json
@@ -85,15 +85,18 @@
     "dist",
     "dist-svelte",
     "src",
+    "!src/**/stories/",
     "CHANGELOG.md"
   ],
   "scripts": {
     "build": "pnpm run build:main --clean && pnpm run build:svelte && pkg check --strict",
+    "build-storybook": "storybook build",
     "build:main": "pkg build --strict",
     "build:svelte": "svelte-kit sync && svelte-package -i ./svelte -o dist-svelte",
     "dev": "pnpm run build:main && pnpm run build:svelte",
     "lint": "eslint .",
     "prepack": "turbo run build",
+    "storybook": "storybook dev -p 6006",
     "test": "vitest --pass-with-no-tests --typecheck"
   },
   "browserslist": "extends @sanity/browserslist-config",
@@ -125,7 +128,8 @@
       "eslint:recommended",
       "plugin:prettier/recommended",
       "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "plugin:storybook/recommended"
     ],
     "rules": {
       "no-console": "error",
@@ -164,11 +168,21 @@
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "6.21.2",
+    "@sanity/color": "^3.0.6",
+    "@sanity/demo": "^2.0.0",
     "@sanity/pkg-utils": "6.9.3",
     "@sanity/ui": "2.8.8",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@sveltejs/adapter-auto": "^3.2.3",
     "@sveltejs/kit": "^2.5.21",
     "@sveltejs/package": "^2.3.3",
+    "@tailwindcss/typography": "^0.5.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -179,14 +193,17 @@
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "happy-dom": "^14.12.3",
     "ls-engines": "^0.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-is": "^18.3.1",
     "rimraf": "^5.0.5",
+    "storybook": "^8.2.9",
     "styled-components": "6.1.12",
     "svelte": "^4.2.18",
+    "tailwindcss": "^3.4.9",
     "typescript": "5.4.5",
     "uuid": "10.0.0",
     "vitest": "^2.0.5"
