--- a/packages/visual-editing/tsconfig.build.json
+++ b/packages/visual-editing/tsconfig.build.json
@@ -4,5 +4,5 @@
     "rootDir": "src"
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "src/stories"]
 }
