--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint:fix": "pnpm lint -- --fix",
     "prepare": "husky",
     "preview": "turbo run preview",
+    "storybook:visual-editing": "turbo run build --filter='@sanity/visual-editing^...' && turbo watch dev storybook --filter='@sanity/visual-editing...'",
     "test": "turbo run test"
   },
   "lint-staged": {
