--- a/packages/visual-editing/turbo.json
+++ b/packages/visual-editing/turbo.json
@@ -2,6 +2,12 @@
   "$schema": "https://turbo.build/schema.json",
   "extends": ["//"],
   "tasks": {
+    "build-storybook": {
+      "dependsOn": ["^build"]
+    },
+    "storybook": {
+      "persistent": false
+    },
     "dev": {
       "persistent": false
     }
