--- a/.prettierignore
+++ b/.prettierignore
@@ -11,5 +11,6 @@ apps/*/public/build
 CHANGELOG.md
 packages/*/dist
 packages/*/dist-svelte
+packages/*/storybook-static
 pnpm-lock.yaml
 tsconfig.json
