feat(comlink): init package

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     },
     "overrides": {
       "@sanity/client": "$@sanity/client",
+      "@sanity/comlink": "workspace:*",
       "@sanity/core-loader": "workspace:*",
       "@sanity/presentation": "workspace:*",
       "@sanity/preview-kit-compat": "workspace:*",
