refactor: use comlink

--- a/packages/core-loader/package.json
+++ b/packages/core-loader/package.json
@@ -110,10 +110,10 @@
     "root": true
   },
   "devDependencies": {
-    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
+    "@sanity/comlink": "^0.0.1",
     "@sanity/pkg-utils": "6.11.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
