--- a/packages/preview-kit-compat/package.json
+++ b/packages/preview-kit-compat/package.json
@@ -95,10 +95,10 @@
     "root": true
   },
   "devDependencies": {
-    "@repo/channels": "workspace:*",
     "@repo/package.config": "workspace:*",
     "@repo/visual-editing-helpers": "workspace:*",
     "@sanity/client": "^6.21.3",
+    "@sanity/comlink": "^0.0.1",
     "@sanity/pkg-utils": "6.11.1",
     "@types/react": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
