--- a/packages/visual-editing-helpers/package.json
+++ b/packages/visual-editing-helpers/package.json
@@ -106,6 +106,7 @@
   "devDependencies": {
     "@repo/package.config": "workspace:*",
     "@sanity/client": "^6.21.3",
+    "@sanity/comlink": "^0.0.1",
     "@sanity/util": "^3.57.2",
     "@types/react": "^18.3.5",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
